--- a/style.css
+++ b/style.css
@@ -63,6 +63,20 @@ body::-webkit-scrollbar-thumb {
   z-index: 1000;
 }
 
+.main .scroll-ind {
+  width: 100%;
+  height: 10px;
+  background: gray;
+  position: fixed;
+  z-index: 1001;
+}
+
+.main .scroll-ind .scroll-ind-filled {
+  width: 0%;
+  height: 10px;
+  background: aqua;
+}
+
 .main .navbar-nav .navbar-unordered-list .navbar-list-items {
     list-style-type: none;
     display: inline-block;
