--- a/style.css
+++ b/style.css
@@ -127,6 +127,24 @@ body::-webkit-scrollbar-thumb {
     margin-bottom: 50px;
 }
 
+.main .content .resume-link {
+  font-size: 2rem;
+  background: none;
+  border: 3px solid #5de6de;
+  padding: 10px;
+  border-radius: 25px;
+  transition: all 0.3s ease;
+}
+
+.main .content .resume-link:hover {
+  box-shadow: 0px 0px 15px black;
+  backdrop-filter: blur(100px);
+}
+
+.main .content a {
+  color: white;
+}
+
 .main .content .content-h4 {
   color: #5de6de;
   letter-spacing: 2px;
